checkbox added, eventlistener addded

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -22,6 +22,13 @@
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
       </div>
       <div class="card-footer">
+        <div class="checkboxes">
+          <label><input type="checkbox" id="includeLowercase" />Include Lowercase</label>
+          <label><input type="checkbox" id="includeUppercase" />Include Uppercase</label>
+          <label><input type="checkbox" id="includeNumeric" />Include Numberic</label>
+          <label><input type="checkbox" id="includeSpecialCharacters" />Include Special Characters</label>
+        </div>
+
         <button id="generate" class="btn">Generate Password</button>
       </div>
     </div>
